testsuite/tests/indexed-types/should_fail/Overlap7.stderr
Overlap7.hs:8:1: error: [GHC-06207]
    • Illegal instance for closed family ‘F’
    • In the type family instance declaration for ‘F’

